@@ -1,0 +1,3 @@
+MD5 69348e455f70b048b8db1263b35f16c2 metacafe-dl-2007.10.09 11245
+RMD160 6f5f36a21a245b64b7476aaa3eb71ecd01bebfa7 metacafe-dl-2007.10.09 11245
+SHA256 44da4e8f6dc1b250f354e8159199252782b2c847df9face30feb92e66a5a88ce metacafe-dl-2007.10.09 11245
