@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.12 2007/09/14 09:05:52 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.13 2007/10/09 19:23:29 agorf Exp $
+
+*youtube-dl-2007.10.09 (09 Oct 2007)
+
+  09 Oct 2007; Aggelos Orfanakos <agorf@gentoo.org>
+  +youtube-dl-2007.10.09.ebuild:
+  Version bump.
 
   14 Sep 2007; Markus Rothe <corsair@gentoo.org>
   youtube-dl-2007.08.24.ebuild:
