@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/metacafe-dl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/metacafe-dl/Attic/ChangeLog,v 1.7 2007/09/13 23:32:36 agorf Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/metacafe-dl/Attic/ChangeLog,v 1.8 2007/10/09 19:27:17 agorf Exp $
+
+*metacafe-dl-2007.10.09 (09 Oct 2007)
+
+  09 Oct 2007; Aggelos Orfanakos <agorf@gentoo.org>
+  +metacafe-dl-2007.10.09.ebuild:
+  Version bump.
 
 *metacafe-dl-2007.09.13 (13 Sep 2007)
 
